<resources>
    <string name="app_name">Net News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="hello">Hello</string>
    <string name="welcome_back_you_ve_been_missed">Welcome back you\'ve been missed</string>
    <string name="again">Again!</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="or_login_with">or login with</string>
    <string name="login_with_google">Login with Google</string>
    <string name="google_icon">Google Icon</string>
    <string name="register_to_get_started">Register to get Started</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="or_register_with">or register with</string>
    <string name="register_with_google">Register with Google</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="latest">Latest</string>
    <string name="net_news">Net News</string>
    <string name="bookmark">Bookmark</string>
    <string name="hide">Hide</string>
    <string name="share">Share</string>
</resources>