<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        style="@style/BACKGROUND"
        tools:context=".authentication.RegisterActivity">

        <TextView
            android:id="@+id/register_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:layout_marginTop="50dp"
            android:textColor="#2979FF"
            android:textSize="42sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:id="@+id/register_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_to_get_started"
            style="@style/SUB_TEXT"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                style="@style/MAIN_TEXT">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MAIN_TEXT"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/e_mail"
            style="@style/MAIN_TEXT">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MAIN_TEXT"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>





        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:endIconMode="password_toggle"
            style="@style/MAIN_TEXT">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            app:endIconMode="password_toggle"
            style="@style/MAIN_TEXT"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                style="@style/MAIN_TEXT"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/BUTTON"
            app:backgroundTint="@null"
            android:text="@string/register"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:id="@+id/register_button"/>
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                style="@style/SUB_TEXT"
                android:layout_marginEnd="3dp"/>

            <TextView
                android:id="@+id/goToRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#0288D1"/>
        </GridLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_register_with"
                style="@style/SUB_TEXT"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:id="@+id/or_login_text"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_marginBottom="15dp"
                app:strokeWidth="1dp"
                style="@style/BUTTON"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/googgle_icon"
                        android:layout_gravity="end" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_with_google"
                        android:layout_marginStart="10dp"
                        android:textSize="14sp"
                        style="@style/MAIN_TEXT"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>



    </LinearLayout>

</layout>